--- a/voting-app-service.yaml
+++ b/voting-app-service.yaml
@@ -11,6 +11,6 @@ spec:
     - port: 80
       targetPort: 80
       nodePort: 30004
-  selectors:
+  selector:
     name: voting-app-pod
     app: demo-voting-app
